--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ src="https://www.facebook.com/tr?id=752232467558536&ev=PageView&noscript=1"
     <div class="row h-100">
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO 1 TRADER</h2>
-            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> 𝐏𝐀𝐍𝐊𝐀𝐉 𝐁𝐇𝐀𝐑𝐃𝐖𝐀𝐉
+            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> 𝗩𝗜𝗦𝗛𝗔𝗟 𝗕 𝗠𝗔𝗟𝗞𝗔𝗡
                 <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
-            <a href="https://t.me/+lxH-YJHfVuw0OTk1"  class="telegram-button">
+            <a href="https://t.me/+BvT2d7Bm3VdkZGZl"  class="telegram-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
             </a> 
@@ -46,7 +46,7 @@ src="https://www.facebook.com/tr?id=752232467558536&ev=PageView&noscript=1"
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i>Highly Expert In analysing the daily trading Graph <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> 10001 % FREE Reports... <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
 
-            <a href="https://t.me/+lxH-YJHfVuw0OTk1"  class="telegram-button">
+            <a href="https://t.me/+BvT2d7Bm3VdkZGZl"  class="telegram-button">
                 <i class="fa-brands fa-telegram"></i> 
                 JOIN US NOW
             </a> 
@@ -55,6 +55,7 @@ src="https://www.facebook.com/tr?id=752232467558536&ev=PageView&noscript=1"
 </div>
 </body>
 </html>
+
 
 
 
